--- a/case2.html
+++ b/case2.html
@@ -46,117 +46,6 @@
   <div class="wrapper">
     <!-- =====  HEADER START  ===== -->
     <header id="header">
-      <!-- <div class="header-top">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-6">
-              <ul class="header-top-left">
-              </ul>
-            </div>
-            <div class="col-sm-6">
-              <ul class="header-top-right text-right">
-                <li class="account"><a href="#">My Account</a></li>
-                <li class="sitemap"><a href="#">Sitemap</a></li>
-                <li class="cart"><a href="#">My Cart</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div> -->
-      <!-- <div class="header">
-        <div class="container">
-          <nav class="navbar">
-            <div class="header-right pull-right mtb_50">
-              <button class="navbar-toggle pull-left" type="button" data-toggle="collapse" data-target=".js-navbar-collapse"> <span class="i-bar"><i class="fa fa-bars"></i></span></button>
-              <div class="shopping-icon">
-                <div class="cart-item " data-target="#cart-dropdown" data-toggle="collapse" aria-expanded="true" role="button">Item's : <span class="cart-qty">02</span></div>
-                <div id="cart-dropdown" class="cart-menu collapse">
-                  <ul>
-                    <li>
-                      <table class="table table-striped">
-                        <tbody>
-                          <tr>
-                            <td class="text-center"><a href="#"><img src="images/product/70x84.jpg" alt="iPod Classic" title="iPod Classic"></a></td>
-                            <td class="text-left product-name"><a href="#">MacBook Pro</a>
-                              <span class="text-left price">$20.00</span>
-                              <input class="cart-qty" name="product_quantity" min="1" value="1" type="number">
-                            </td>
-                            <td class="text-center"><a class="close-cart"><i class="fa fa-times-circle"></i></a></td>
-                          </tr>
-                          <tr>
-                            <td class="text-center"><a href="#"><img src="images/product/70x84.jpg" alt="iPod Classic" title="iPod Classic"></a></td>
-                            <td class="text-left product-name"><a href="#">MacBook Pro</a>
-                              <span class="text-left price">$20.00</span>
-                              <input class="cart-qty" name="product_quantity" min="1" value="1" type="number">
-                            </td>
-                            <td class="text-center"><a class="close-cart"><i class="fa fa-times-circle"></i></a></td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </li>
-                    <li>
-                      <table class="table">
-                        <tbody>
-                          <tr>
-                            <td class="text-right"><strong>Sub-Total</strong></td>
-                            <td class="text-right">$2,100.00</td>
-                          </tr>
-                          <tr>
-                            <td class="text-right"><strong>Eco Tax (-2.00)</strong></td>
-                            <td class="text-right">$2.00</td>
-                          </tr>
-                          <tr>
-                            <td class="text-right"><strong>VAT (20%)</strong></td>
-                            <td class="text-right">$20.00</td>
-                          </tr>
-                          <tr>
-                            <td class="text-right"><strong>Total</strong></td>
-                            <td class="text-right">$2,122.00</td>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </li>
-                    <li>
-                      <form action="#">
-                        <input class="btn pull-left mt_10" value="View cart" type="submit">
-                      </form>
-                      <form action="#">
-                        <input class="btn pull-right mt_10" value="Checkout" type="submit">
-                      </form>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <div class="main-search pull-right">
-                <div class="search-overlay">
-                  (Close Icon)
-                  <a href="javascript:void(0)" class="search-overlay-close"></a>
-                  (End Close Icon)
-                  <div class="container">
-                    (Search Form)
-                    <form role="search" id="searchform" action="search" method="get">
-                      <label class="h5 normal search-input-label">Enter keywords To Search Entire Store</label>
-                      <input value="" name="q" placeholder="Search here..." type="search">
-                      <button type="submit"></button>
-                    </form>
-                    (End Search Form)
-                  </div>
-                </div>
-                <div class="header-search"> <a id="search-overlay-btn"></a> </div>
-              </div>
-            </div>
-            <div class="collapse navbar-collapse js-navbar-collapse pull-right">
-              <ul id="menu" class="nav navbar-nav">
-                <li> <a href="#">工程實績</a></li>
-                <li> <a href="product.html">產品介紹</a></li>
-                <li> <a href="#">報價諮詢</a></li>
-                <li> <a href="#">關於我們</a></li>
-                <li> <a href="#">最新消息</a></li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-      </div> -->
       <div class="header-bottom">
         <div class="container">
           <div class="row">
@@ -219,6 +108,19 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
+                      <div class="image product-imageblock"> <a href="c21.html"> <img class="img-responsive" title="USD" alt="" src="images/work/L21.jpg"> <img class="img-responsive" title="USD" alt="" src="images/work/L21_2.jpg"> </a> </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-8">
+                    <div class="caption product-detail">
+                      <h4 class="product-name"><a href="c21.html">USD</a></h4>
+                      <h6 class="product-name">實績分類：遊戲主題餐廳</h6>
+                    </div>
+                  </div>
+                </li>
+                <li class="item product-layout-left mb_20">
+                  <div class="product-list col-xs-4">
+                    <div class="product-thumb">
                       <div class="image product-imageblock"> <a href="c16.html"> <img class="img-responsive" title="次郎丸" alt="" src="images/work/L16.jpg"> <img class="img-responsive" title="次郎丸" alt="" src="images/work/L16_2.jpg"> </a> </div>
                     </div>
                   </div>
@@ -226,6 +128,19 @@
                     <div class="caption product-detail">
                       <h4 class="product-name"><a href="c16.html">次郎丸</a></h4>
                       <h6 class="product-name">實績分類：日式料理</h6>
+                    </div>
+                  </div>
+                </li>
+                <li class="item product-layout-left mb_20">
+                  <div class="product-list col-xs-4">
+                    <div class="product-thumb">
+                      <div class="image product-imageblock"> <a href="c20.html"> <img class="img-responsive" title="Mini Hotel" alt="" src="images/work/L20.jpg"> <img class="img-responsive" title="Mini Hotel" alt="" src="images/work/L20_2.jpg"> </a> </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-8">
+                    <div class="caption product-detail">
+                      <h4 class="product-name"><a href="c20.html">Mini Hotel</a></h4>
+                      <h6 class="product-name">實績分類：旅館</h6>
                     </div>
                   </div>
                 </li>
@@ -271,32 +186,6 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c20.html"> <img class="img-responsive" title="Mini Hotel" alt="" src="images/work/L20.jpg"> <img class="img-responsive" title="Mini Hotel" alt="" src="images/work/L20_2.jpg"> </a> </div>
-                    </div>
-                  </div>
-                  <div class="col-xs-8">
-                    <div class="caption product-detail">
-                      <h4 class="product-name"><a href="c20.html">Mini Hotel</a></h4>
-                      <h6 class="product-name">實績分類：旅館</h6>
-                    </div>
-                  </div>
-                </li>
-                <li class="item product-layout-left mb_20">
-                  <div class="product-list col-xs-4">
-                    <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c21.html"> <img class="img-responsive" title="USD" alt="" src="images/work/L21.jpg"> <img class="img-responsive" title="USD" alt="" src="images/work/L21_2.jpg"> </a> </div>
-                    </div>
-                  </div>
-                  <div class="col-xs-8">
-                    <div class="caption product-detail">
-                      <h4 class="product-name"><a href="c21.html">USD</a></h4>
-                      <h6 class="product-name">實績分類：遊戲主題餐廳</h6>
-                    </div>
-                  </div>
-                </li>
-                <li class="item product-layout-left mb_20">
-                  <div class="product-list col-xs-4">
-                    <div class="product-thumb">
                       <div class="image product-imageblock"> <a href="c22.html"> <img class="img-responsive" title="大地之愛" alt="" src="images/work/L22.jpg"> <img class="img-responsive" title="大地之愛" alt="" src="images/work/L22_2.jpg"> </a> </div>
                     </div>
                   </div>
@@ -304,6 +193,19 @@
                     <div class="caption product-detail">
                       <h4 class="product-name"><a href="c22.html">大地之愛</a></h4>
                       <h6 class="product-name">實績分類：商鋪店面</h6>
+                    </div>
+                  </div>
+                </li>
+                <li class="item product-layout-left mb_20">
+                  <div class="product-list col-xs-4">
+                    <div class="product-thumb">
+                      <div class="image product-imageblock"> <a href="c25.html"> <img class="img-responsive" title="杏甜" alt="" src="images/work/L25.jpg"> <img class="img-responsive" title="杏甜" alt="" src="images/work/L25_2.jpg"> </a> </div>
+                    </div>
+                  </div>
+                  <div class="col-xs-8">
+                    <div class="caption product-detail">
+                      <h4 class="product-name"><a href="c25.html">杏甜</a></h4>
+                      <h6 class="product-name">實績分類：手作冰店</h6>
                     </div>
                   </div>
                 </li>
@@ -333,19 +235,6 @@
                     </div>
                   </div>
                 </li>
-                <li class="item product-layout-left mb_20">
-                  <div class="product-list col-xs-4">
-                    <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c25.html"> <img class="img-responsive" title="杏甜" alt="" src="images/work/L25.jpg"> <img class="img-responsive" title="杏甜" alt="" src="images/work/L25_2.jpg"> </a> </div>
-                    </div>
-                  </div>
-                  <div class="col-xs-8">
-                    <div class="caption product-detail">
-                      <h4 class="product-name"><a href="c25.html">杏甜</a></h4>
-                      <h6 class="product-name">實績分類：手作冰店</h6>
-                    </div>
-                  </div>
-                </li>
               </ul>
             </div>
           </div>
@@ -363,89 +252,89 @@
           <!-- =====  BREADCRUMB END===== -->
           <div class="row mt_10">
             <div class="col-md-6">
-              <div><a class="thumbnails" href="./c1.html"> <img class="" style="" data-name="product_image" src="images/work/L1.jpg" alt="" /></a></div>
+              <div><a class="thumbnails" href="./c5.html"> <img class="" style="" data-name="product_image" src="images/work/c5m.jpg" alt="" /></a></div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb">
-              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c1.html" title="">Gogi Gogi 一起肉肉吧</a></h4>
+              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c5.html" title="">京典臻品</a></h4>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
-                  <span> 餐廳</span></li>
+                  <span> 水晶飾品店</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
-                  <span>亞特圓形招牌、走廊燈箱、帆布架廣告</span>
+                  <span>正發光立體字、背光無邊立體字、不銹鋼造型門牌</span>
                 </li>
               </ul>
               <hr>
-              <p class="product-desc mtb_30">一起肉肉吧是一間位於台中中友百貨商圈對面的韓式定食<br>豐富的韓式組合、烤肉、料理深獲在地好評</p>
-              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c1.html" title="">「...More+」</a></h4>
+              <p class="product-desc mtb_30">京典臻品位於西屯區福雅路<br>是天然水晶礦石專賣店</p>
+              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c5.html" title="">「...More+」</a></h4>
             </div>
           </div>
 
           <div class="row mt_10 ">
             <div class="col-md-6" style="margin-top:30px">
-              <div><a class="thumbnails" href="./c2.html"> <img style="" data-name="product_image" src="images/work/L2.jpg" alt="" /></a></div>
+              <div><a class="thumbnails" href="./c6.html"> <img style="" data-name="product_image" src="images/work/c6m.jpg" alt="" /></a></div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb" style="margin-top:30px">
-              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c2.html" title="">一拳咖啡</a></h4>
+              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c6.html" title="">天承軒手工饅頭</a></h4>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
-                  <span> 咖啡廳</span></li>
+                  <span> 手工饅頭專賣店</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
-                  <span>亞特圓形招牌、背光無邊字、磁吸式5連板價目表</span>
+                  <span>玻璃貼輸出、木頭雕刻招牌、車貼輸出</span>
                 </li>
               </ul>
               <hr>
-              <p class="product-desc mtb_30">一拳咖啡位於北區梅庭街，為舒芙蕾及鬆餅專賣店，選用日本進口麵粉<br>小農鮮奶及台灣牧場元氣蛋，口感綿密鬆軟，入口即化</p>
-              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c2.html" title="">「...More+」</a></h4>
+              <p class="product-desc mtb_30">天承軒位於西區華美街<br>為手工饅頭專賣店</p>
+              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c6.html" title="">「...More+」</a></h4>
             </div>
           </div>
 
           <div class="row mt_10">
             <div class="col-md-6" style="margin-top:30px">
-              <div><a class="thumbnails" href="./c3.html"> <img class="" style="" data-name="product_image" src="images/work/L3.jpg" alt="" /></a></div>
+              <div><a class="thumbnails" href="./c7.html"> <img class="" style="" data-name="product_image" src="images/work/c7m.jpg" alt="" /></a></div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb" style="margin-top:30px">
-              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c3.html" title="">三喜蛋餅</a></h4>
+              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c7.html" title="">天蜜日式養生甜品</a></h4>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
-                  <span> 餐廳</span></li>
+                  <span> 日式甜品專賣店</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
-                  <span>亞特圓形招牌、烤漆鐵件價目表、不鏽鋼烤漆立體字</span>
+                  <span>暖簾、球面亞特圓形招牌、壓克力銅釦海報架</span>
                 </li>
               </ul>
               <hr>
-              <p class="product-desc mtb_30">三喜蛋餅位於北區太平路<br>是在地眾所皆知的古早味蛋餅專賣店</p>
-              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c3.html" title="">「...More+」</a></h4>
+              <p class="product-desc mtb_30">天蜜位於大里區鐵路街<br>為甜品專賣店</p>
+              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c7.html" title="">「...More+」</a></h4>
             </div>
           </div>
 
           <div class="row mt_10 ">
             <div class="col-md-6" style="margin-top:30px">
-              <div><a class="thumbnails" href="./c4.html"> <img style="" data-name="product_image" src="images/work/L4.jpg" alt="" /></a></div>
+              <div><a class="thumbnails" href="./c8.html"> <img style="" data-name="product_image" src="images/work/c8m.jpg" alt="" /></a></div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb" style="margin-top:30px">
-              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c4.html" title="">大魔大滿足鍋物</a></h4>
+              <h4 data-name="product_name" class="product-name" style="font-size:150%;"><a href="./c8.html" title="">天賦股份有限公司</a></h4>
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
-                  <span> 鍋物料理</span></li>
+                  <span> 公司行號</span></li>
                 <li>
                   <label><a href="#">使用產品</a></label>
-                  <span>不銹鋼背光立體字、烤漆壓克力字、帆布廣告</span>
+                  <span>不不銹鋼毛絲面門牌、不銹鋼雷切字、不銹鋼板鏤空雷切</span>
                 </li>
               </ul>
               <hr>
-              <p class="product-desc mtb_30">大魔位於西屯區<br>是主打高級食材的鍋物料理店</p>
-              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c4.html" title="">「...More+」</a></h4>
+              <p class="product-desc mtb_30">天賦位於西屯區福雅路<br>為自動化倉儲設備公司</p>
+              <h4 data-name="product_name" class="product-name" style="text-align:right;"><a href="./c8.html" title="">「...More+」</a></h4>
             </div>
           </div>
         </div>
-        <h3 style="text-align:center; color:#777;">①<a href="./case2.html" style="color:#777;"> ⇨</a></h3>
+        <h3 style="text-align:center; color:#777;"><a href="./case.html" style="color:#777;">⇦ </a>②<a href="./case2.html" style="color:#777;"> ⇨</a></h3>
         <!-- <h3 style="text-align:center;">❶⋄<a href="./case2.html" title="">②</a>⋄<a href="./case3.html" title="">③</a>⋄<a href="./case4.html" title="">④</a>⋄<a href="./case5.html" title="">⑤</a>⋄<a href="./case6.html" title="">⑥</a>⋄<a href="./case7.html" title="">⑦</a>⋄<a href="./case8.html" title="">⑧</a>⋄<a href="./case9.html" title="">⑨</a>⋄<a href="./case10.html" title="">⑩</a></h3> -->
         <br>
       </div>
