--- a/c5.html
+++ b/c5.html
@@ -121,7 +121,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c28.html"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28.jpg"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c28.html"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28a.jpg" style="height:40px"> <img class="img-responsive" title="坪林52家品" alt="" src="images/work/L28a_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -134,7 +134,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c29.html"> <img class="img-responsive" title="怪獸比薩" alt="" src="images/work/L29.jpg"> <img class="img-responsive" title="怪獸比薩" alt="" src="images/work/L29_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c29.html"> <img class="img-responsive" title="怪獸比薩" alt="" src="images/work/L29a.jpg" style="height:40px"> <img class="img-responsive" title="怪獸比薩" alt="" src="images/work/L29a_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -147,7 +147,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c27.html"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27.jpg"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c27.html"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27a.jpg" style="height:40px"> <img class="img-responsive" title="和旺" alt="" src="images/work/L27a_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -160,7 +160,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c30.html"> <img class="img-responsive" title="拉拉手親水悠遊館" alt="" src="images/work/L30.jpg"> <img class="img-responsive" title="拉拉手親水悠遊館" alt="" src="images/work/L30_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c30.html"> <img class="img-responsive" title="拉拉手親水悠遊館" alt="" src="images/work/L30a.jpg" style="height:40px"> <img class="img-responsive" title="拉拉手親水悠遊館" alt="" src="images/work/L30a_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -173,7 +173,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c31.html"> <img class="img-responsive" title="拓思拉" alt="" src="images/work/L31.jpg"> <img class="img-responsive" title="拓思拉" alt="" src="images/work/L31_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c31.html"> <img class="img-responsive" title="拓思拉" alt="" src="images/work/L31a.jpg" style="height:40px"> <img class="img-responsive" title="拓思拉" alt="" src="images/work/L31a_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -212,7 +212,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c34.html"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34.jpg"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c34.html"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34a.jpg" style="height:40px"> <img class="img-responsive" title="法萊空間設計" alt="" src="images/work/L34a_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -225,7 +225,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c35.html"> <img class="img-responsive" title="花卉博覽會" alt="" src="images/work/L35.jpg"> <img class="img-responsive" title="花卉博覽會" alt="" src="images/work/L35_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c35.html"> <img class="img-responsive" title="花卉博覽會" alt="" src="images/work/L35a.jpg" style="height:40px"> <img class="img-responsive" title="花卉博覽會" alt="" src="images/work/L35a_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -251,7 +251,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c37.html"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37.jpg"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c37.html"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37a.jpg" style="height:40px"> <img class="img-responsive" title="青崎" alt="" src="images/work/L37a_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -264,7 +264,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c39.html"> <img class="img-responsive" title="厚冠&昌冠" alt="" src="images/work/L39.jpg"> <img class="img-responsive" title="厚冠&昌冠" alt="" src="images/work/L39_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c39.html"> <img class="img-responsive" title="厚冠&昌冠" alt="" src="images/work/L39a.jpg" style="height:40px"> <img class="img-responsive" title="厚冠&昌冠" alt="" src="images/work/L39a_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -290,7 +290,7 @@
                 <li class="item product-layout-left mb_20">
                   <div class="product-list col-xs-4">
                     <div class="product-thumb">
-                      <div class="image product-imageblock"> <a href="c38.html"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38.jpg"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38_2.jpg"> </a> </div>
+                      <div class="image product-imageblock"> <a href="c38.html"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38a.jpg" style="height:40px"> <img class="img-responsive" title="冠陽" alt="" src="images/work/L38a_2.jpg" style="height:40px"> </a> </div>
                     </div>
                   </div>
                   <div class="col-xs-8">
@@ -317,7 +317,7 @@
           <!-- =====  BREADCRUMB END===== -->
           <div class="row mt_10 ">
             <div class="col-md-6">
-              <div><a class="thumbnails"> <img style="" data-name="product_image" src="images/work/c5m.jpg" alt="" /></a></div>
+              <div><a class="thumbnails"> <img style="" data-name="product_image" src="images/work/c5mmm.jpg" alt="" /></a></div>
 
               <div id="product-thumbnail" class="owl-carousel">
                 <div class="item">
@@ -335,8 +335,8 @@
               </div>
             </div>
             <div class="col-md-6 prodetail caption product-thumb">
-              <h4 data-name="product_name" class="product-name"><a href="#" title="">京典臻品</a></h4>
-              <hr>
+              <h4 data-name="product_name" class="product-name" style="font-size:23px"><a href="#" title="">京典臻品</a></h4>
+              <!-- <hr> -->
               <ul class="list-unstyled product_info mtb_20">
                 <li>
                   <label>實績分類</label>
@@ -349,7 +349,7 @@
               <hr>
               <p class="product-desc mtb_30">京典臻品位於西屯區福雅路<br>是天然水晶礦石專賣店</p>
 
-              <a class="btn" href="./order.html" title="" style="margin-left:180px">諮詢頁面</a> 
+              <a class="btn" href="./order.html" title="" style="float:right">立即諮詢</a> 
             </div>
           </div>
           <div class="row">
