--- a/about.html
+++ b/about.html
@@ -55,40 +55,35 @@
   </div>
 </div>
 <div class="wjdh-banner" style="background-image: url(./images/about1.jpg);"></div>
-<div class="cat-menu">
+<!-- <div class="cat-menu">
   <div class="container">
     <div class="menu-list">
      <span class='cur'><a href='index.html'>快得力簡介</a></span>
       	<span><a href='case.html'>工程實績</a></span>
-      	
       	<span><a href='product.html'>產品項目</a></span>
-      	     
     </div>
   </div>
-</div>
+</div> -->
  
 <div class="list01">
   <div class="container">
     <div class="page-about content-show">
       <div class="page-content">
       <h2 style="color:#ee7800; text-align:center">快得力沿革</h2>
+        <p style="margin-top:10px">快得力廣告創於1998年，致力於廣告市場餘20多年經驗，擁有上百件企業連鎖招牌實績，經歷豐富的製作經驗、製工精良，獲得企業口碑的推薦。
+        是值得信賴商業招牌最優質顧問。為公家機關和企業客户等提供全面且專業的综合解决方案與全程卓越的客户體驗。
+        我們以客户需求和發展理念為動力，使公司始終處於行業领先地位，將富有特色的方案與專業的技術结合，持續增進解决專案之綜合能力。
+        統籌諮詢、設計、技術、管理互相協作的高效率服務模式，因地制宜為不同方案及專案項目提供具有創新性與經濟的解决方案。</p>
         <br>
-        <p>快得力廣告創於1998年，致力於廣告市場餘20多年經驗，擁有上百件企業連鎖招牌實績，經歷豐富的製作經驗、製工精良，獲得企業口碑的推薦。</p>
-        <p>是值得信賴商業招牌最優質顧問。為公家機關和企業客户等提供全面且專業的综合解决方案與全程卓越的客户體驗。</p>
-        <p>我們以客户需求和發展理念為動力，使公司始終處於行業领先地位，將富有特色的方案與專業的技術结合，持續增進解决專案之綜合能力。</p>
-        <p>統籌諮詢、設計、技術、管理互相協作的高效率服務模式，因地制宜為不同方案及專案項目提供具有創新性與經濟的解决方案。</p>
+	    <h2 style="color:#ee7800; text-align:center; margin-top:20px">企業理念</h2>
         <br>
-	    <h2 style="color:#ee7800; text-align:center">企業理念</h2>
-        <br>
-	      <p>堅持品質(Quality)、專業技術(Professional Technology)、快速交案(Quickly)、高性價比(Cost-Performance ratio)，擁有業界最薄燈箱規格。</p>
-        <p>首創磁吸式易替換廣告文宣、造型款訂製，透明工期提供連鎖品牌最優質的選擇。</p>
-	      <p>長期耕耘廣告業界二十餘年，榮獲多項設計比賽獎項，是集研發、設計、生產、保固、諮詢服務等一体的綜合型企業，為您提供品質卓越、專業誠信的服務，廣受在地客戶信賴。</p>
-        <br>
-      <h2 style="color:#ee7800; text-align:center">服務特色</h2>
-        <br>
-	      <p>連鎖企業品牌合作，包含商業品牌、連鎖店面、食/飲品、商展空間、建築、餐廳、汽車、酒商、醫療用品…等商家，立基十餘年獲得多業界多品牌的肯定。</p>
-		    <p>快得力長期致力於廣告及設計領域，從店面的初期規劃到後續操作執行，為您提供從初期規劃、概念設計、系統製作、安裝檢測、保固維護等完整且專業化的服務。</p>
-        <p>具體包括專案的每一個步驟，鉅細靡遺，交給快得力，讓您得意又放心。</p>
+	      <p style="margin-top:10px">堅持品質(Quality)、專業技術(Professional Technology)、快速交案(Quickly)、高性價比(Cost-Performance ratio)，擁有業界最薄燈箱規格。
+        首創磁吸式易替換廣告文宣、造型款訂製，透明工期提供連鎖品牌最優質的選擇。
+	      長期耕耘廣告業界二十餘年，榮獲多項設計比賽獎項，是集研發、設計、生產、保固、諮詢服務等一体的綜合型企業，為您提供品質卓越、專業誠信的服務，廣受在地客戶信賴。</p>
+      <h2 style="color:#ee7800; text-align:center; margin-top:20px">服務特色</h2>
+	      <p style="margin-top:10px">連鎖企業品牌合作，包含商業品牌、連鎖店面、食/飲品、商展空間、建築、餐廳、汽車、酒商、醫療用品…等商家，立基十餘年獲得多業界多品牌的肯定。
+		    快得力長期致力於廣告及設計領域，從店面的初期規劃到後續操作執行，為您提供從初期規劃、概念設計、系統製作、安裝檢測、保固維護等完整且專業化的服務。
+        具體包括專案的每一個步驟，鉅細靡遺，交給快得力，讓您得意又放心。</p>
       </div>
     </div>
   </div>
@@ -107,7 +102,7 @@
             </div>
             </a> </div>
           <p>一起肉肉吧是一間位於台中中友百貨商圈對面的韓式定食豐富的韓式組合、烤肉、料理深獲在地好評</p>
-          <a href="c1.html" title="了解详情" class="more"><span style="">了解详情</span><i></i></a> <i class="border-top"></i><i class="border-right"></i><i class="border-bottom"></i><i class="border-left"> </i></li>
+          <a href="c1.html" title="了解詳情" class="more"><span style="">了解詳情</span><i></i></a> <i class="border-top"></i><i class="border-right"></i><i class="border-bottom"></i><i class="border-left"> </i></li>
 
       <li style="margin-left:70px;"><a href="c2.html" title="" class="title-a" style="color:#ee7800">一拳咖啡</a>
           <div class="img"> <a href="c2.html" title=""> <img src="./images/abc2.jpg" data-thumb="0" data-src="" title="" alt="" />
@@ -116,7 +111,7 @@
             </div>
             </a> </div>
           <p>一拳咖啡位於北區梅庭街，為舒芙蕾及鬆餅專賣店，口感綿密鬆軟，入口即化</p>
-          <a href="c2.html" title="了解详情" class="more"><span>了解详情</span><i></i></a> <i class="border-top"></i><i class="border-right"></i><i class="border-bottom"></i><i class="border-left"> </i></li>
+          <a href="c2.html" title="了解詳情" class="more"><span>了解詳情</span><i></i></a> <i class="border-top"></i><i class="border-right"></i><i class="border-bottom"></i><i class="border-left"> </i></li>
 
       <li style="margin-left:70px;"><a href="c3.html" title="" class="title-a" style="color:#ee7800">三喜蛋餅</a>
           <div class="img"> <a href="c3.html" title=""> <img src="./images/abc3.jpg" data-thumb="0" data-src="" title="" alt="" />
@@ -125,7 +120,7 @@
             </div>
             </a> </div>
           <p>三喜蛋餅位於北區太平路，是在地眾所皆知的古早味蛋餅專賣店</p>
-          <a href="c3.html" title="了解详情" class="more"><span>了解详情</span><i></i></a> <i class="border-top"></i><i class="border-right"></i><i class="border-bottom"></i><i class="border-left"> </i></li>
+          <a href="c3.html" title="了解詳情" class="more"><span>了解詳情</span><i></i></a> <i class="border-top"></i><i class="border-right"></i><i class="border-bottom"></i><i class="border-left"> </i></li>
 
       <li style="margin-left:70px;"><a href="c4.html" title="" class="title-a" style="color:#ee7800">大魔</a>
           <div class="img"> <a href="c4.html" title=""> <img src="./images/abc4.jpg" data-thumb="0" data-src="" title="" alt="" />
@@ -134,7 +129,7 @@
             </div>
             </a> </div>
           <p>大魔位於西屯區，為主打高級食材的鍋物料理店</p>
-          <a href="c4.html" title="了解详情" class="more"><span>了解详情</span><i></i></a> <i class="border-top"></i><i class="border-right"></i><i class="border-bottom"></i><i class="border-left"> </i></li>
+          <a href="c4.html" title="了解詳情" class="more"><span>了解詳情</span><i></i></a> <i class="border-top"></i><i class="border-right"></i><i class="border-bottom"></i><i class="border-left"> </i></li>
       </ul>
     </div>
     <div class="clearfix"> </div>
